# SchemaRAG-dify-plugin

./: .difyignore  .gitignore  AGENTS.md  CLAUDE.md  DATABASE_SUPPORT_UPDATE.md  DYNAMIC_CONFIGURATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PRIVACY.md  README.md  README_CN.md  UPDATE.md  USAGE.md  config.py  manifest.yaml  pyproject.toml  requirements.txt  test_text2data.py  utils.py
.github/workflows/: package-check.yml  plugin-publish.yml  publish.yml
core/dify/: dify_client.py
core/llm_plot/: LLM_PLOT_GUIDE.md  README.md  README_llm_plot.md  __init__.py  chart_controller.py  chart_generator.py  chart_prompts.py  chart_schema.py  config.py  data_processor.py  examples.py  llm_analyzer.py  models.py  test_beautiful_charts.py  test_llm_plot.py  validator.py
core/m_schema/: __init__.py  m_schema.py  schema_engine.py  sql_database.py
demo/: text2sql-workflow.yml
docs/: CACHE_OPTIMIZATION_GUIDE.md  CONTEXT_MEMORY_GUIDE.md  READEME_DM_INSTALL.md  SQL_REFINER_GUIDE.md  SQL_REFINER_IMPLEMENTATION.md
prompt/: sql_refiner_prompt.py  summary_prompt.py  text2sql_prompt.py
prompt/components/: __init__.py  context_formatter.py
provider/: __init__.py  build_schema_rag.py  provider.yaml
service/: __init__.py  database_service.py  dify_service.py  knowledge_service.py  network_service.py  schema_builder.py  sql_refiner.py
service/cache/: __init__.py  base.py  config.py  (+3 more)
test/: test_basic_chart.py  test_chinese_fonts.py  test_context_manager.py  test_custom_prompts.py  test_database_support.py  test_dependency_metadata.py  test_dify_client.py  test_dify_service.py  test_integrated_features.py  test_llm_plot.py  test_llm_plot_tool.py  test_multiple_dataset_support.py  test_multiple_datasets.py  test_provider_credentials.py  test_release_workflow.py  test_sql_refiner.py  test_validation_logic.py
tools/: __init__.py  data_summary.py  data_summary.yaml  llm_plot.py  llm_plot.yaml  parameter_validator.py  sql_agent.py  sql_executer.py  sql_executer.yaml  sql_executer_cust.py  sql_executer_cust.yaml  text2data.py  text2data.yaml  text2sql.py  text2sql.yaml
(+6 files in other folders)
