[project]
name = "SchemaRAG"
version = "0.1.0"
description = "Build database schema for RAG in Dify dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin",
    "sqlalchemy",
    "pymysql",
    "psycopg2-binary",
    "httpx",
    "llama-index-core",
    "dify-client",
    "pandas>=2.3.1",
    "tabulate>=0.9.0",
    # 额外的数据库驱动
    "pymssql",
    "oracledb",
    # "dameng-python",  # 达梦数据库驱动，如果需要的话取消注释
    "matplotlib>=3.10.5",
    "pytest>=8.4.1",
    "dmpython>=2.5.22",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools", "service", "core", "provider"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]
